[gd_scene load_steps=2 format=3 uid="uid://d20tl2qqm5t5s"]

[ext_resource type="Script" path="res://hud.gd" id="1_l4y2k"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_l4y2k")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 86.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -86.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.258824, 0.866667, 0.658824, 1)
theme_override_font_sizes/font_size = 60
text = "Alien invasion"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -200.0
offset_right = 90.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
